force-app/main/default/objects/Product2/fields/SBQQ__SubscriptionPricing__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SubscriptionPricing__c</fullName>
    <description>Type of pricing to use for this subscription. &quot;None&quot; means this product is not a subscription.</description>
    <inlineHelpText>Tipo de precificação usada para essa assinatura. &quot;Nenhum&quot; significa que esse produto não é uma assinatura.</inlineHelpText>
    <label>Subscription Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Percent Of Total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>