force-app/main/default/objects/Product2/fields/SBQQ__SubscriptionTarget__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SubscriptionTarget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Effective product on which maintenance should calculate.</description>
    <inlineHelpText>Use esse campo para substituir um produto incluído em um cálculo de percentual do total. Aponte essa pesquisa para um produto com um preço de lista que você gostaria de usar para os cálculos de Percentual do total do produto atual.</inlineHelpText>
    <label>Percent Of Total Target</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Subscription Targeting Products</relationshipLabel>
    <relationshipName>SubscriptionTargetingProducts</relationshipName>
    <type>Lookup</type>
</CustomField>