force-app/main/default/objects/Product2/fields/SBQQ__TermDiscountLevel__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TermDiscountLevel__c</fullName>
    <description>Level of subscription term that&apos;s used to calculated term discount.</description>
    <inlineHelpText>Especifique o nível do termo de assinatura que deve ser usado ao calcular o desconto do termo. Deixe em branco para indicar o padrão.</inlineHelpText>
    <label>Term Discount Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Line</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>