force-app/main/default/objects/Product2/fields/SBQQ__UpgradeRatio__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UpgradeRatio__c</fullName>
    <description>The conversion rate between this upgrade product and its source product.</description>
    <inlineHelpText>A taxa de conversão entre a quantidade desse produto e a do produto de origem.</inlineHelpText>
    <label>Upgrade Ratio</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>