force-app/main/default/objects/Product2/fields/SBQQ__UpgradeSource__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UpgradeSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the product being upgraded.</description>
    <inlineHelpText>Produto que está recebendo atualização. Preencher esse campo torna esse produto uma atualização.</inlineHelpText>
    <label>Upgrade Source</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Target Upgrades</relationshipLabel>
    <relationshipName>TargetUpgrades</relationshipName>
    <type>Lookup</type>
</CustomField>