force-app/main/default/objects/Product2/fields/SBQQ__UpgradeTarget__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UpgradeTarget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product being upgraded to.</description>
    <inlineHelpText>Especifique o produto da atualização. Aplica-se somente se esse produto for uma atualização, conforme indicado pelo preenchimento do campo Origem de atualização ou pela presença de registro de Origem de atualização relacionados.</inlineHelpText>
    <label>Upgrade Target</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Source Upgrades</relationshipLabel>
    <relationshipName>SourceUpgrades</relationshipName>
    <type>Lookup</type>
</CustomField>