force-app/main/default/objects/Product2/fields/Valor_FIPE__c.field-meta.xml
<CustomField>
    <fullName>Valor_FIPE__c</fullName>
    <label>Valor FIPE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>