force-app/main/default/objects/Product2/fields/Versao__c.field-meta.xml
<CustomField>
    <fullName>Versao__c</fullName>
    <label>Versao</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
            </value>
            <value>
                <fullName>Seminovo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>